--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/cs_cz.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/cs_cz.json
@@ -30,6 +30,8 @@
   "text.rei.config.menu.display.side_search_field": "Postranní vyhledávací pole",
   "text.rei.config.menu.display.syntax_highlighting": "Zvýraznění syntaxe",
   "text.rei.config.menu.config": "Více Možností...",
+  "text.rei.config.menu.search_field.position": "Pozice vyhledávacího pole...",
+  "text.rei.config.menu.search_field.input_method": "Vstupní metody...",
   "category.rei.crafting": "Vyrábění",
   "category.rei.smelting": "Vypékání",
   "category.rei.smelting.fuel": "Palivo",
@@ -75,6 +77,19 @@
   "text.rei.performance": "Analýza výkonu",
   "text.rei.addons": "REI Doplňky",
   "text.rei.shapeless": "Beztvarý",
+  "text.rei.input.methods": "Vstupní metody",
+  "text.rei.input.methods.default": "Výchozí",
+  "text.rei.input.methods.default.description": "Výchozí vstupní metoda. Toto nemění hledaný výraz.",
+  "text.rei.input.methods.jyutping": "Jyutping (Kantonština)",
+  "text.rei.input.methods.jyutping.description": "Vstupní metoda porovnávání čínských znaků s Jyutping (Kantonština).",
+  "text.rei.input.methods.pinyin": "Pinyin (Mandarínština)",
+  "text.rei.input.methods.pinyin.description": "Vstupní metoda porovnávání čínských znaků s Pinyin (Mandarínština).",
+  "text.rei.input.methods.bopomofo": "Bopomofo (Mandarínština)",
+  "text.rei.input.methods.bopomofo.description": "Vstupní metoda porovnávání čínských znaků s Bopomofo (Mandarínština).",
+  "text.rei.input.methods.hint": "Alternativní vstupní metody jsou k dispozici pro váš jazyk.",
+  "text.rei.input.methods.hint.configure": "Konfigurace",
+  "text.rei.input.methods.hint.ignore": "Ignorovat",
+  "text.rei.input.methods.initializing": "Inicializace vstupní metody",
   "ordering.rei.ascending": "Vzestupně",
   "ordering.rei.descending": "Sestupně",
   "ordering.rei.registry": "Registr",
@@ -161,8 +176,6 @@
   "text.rei.changelog.error.missingChangelogFile": "Chybí soubor se seznamem změn!",
   "text.rei.changelog.error.failedToReadChangelogFile": "Nepodařilo se přečíst soubor se seznamem změn!",
   "text.rei.collapsed.entry": "Sbalený záznam: %s",
-  "text.rei.collapsed.entry.hint.expand": "Kliknutím rozbalíte všechny %s (%d položek)",
-  "text.rei.collapsed.entry.hint.collapse": "Kliknutím sbalíte všechny %s (%d položek)",
   "favorite.section.gamemode": "Herní režim",
   "favorite.section.weather": "Počasí",
   "favorite.section.time": "Čas",
