--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/de_de.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/de_de.json
@@ -8,20 +8,20 @@
   "text.rei.no_permission_cheat": "Operator-Berechtigungen sind erforderlich, um Gegenstände zu cheaten",
   "text.rei.search.field.suggestion": "Suche...",
   "text.rei.feedback": "Möchtest du dem REI Entwickler dein Feedback geben? %s um dein Feedback einzureichen!",
-  "text.rei.feedback.link": "Klicke hier um das Google-Form zu besuchen",
+  "text.rei.feedback.link": "Klicke hier um das Google-Formular zu besuchen",
   "text.rei.support.me": "Unterstütze mich, um REI weiter zu verbessern!",
   "text.rei.support.me.desc": "Als Patreon Unterstützer von REI kannst du die neueste Version von REI für Minecraft Snapshots verwenden.\nAlternativ kannst du mich auch finanziell unterstützen, indem du einen BisectHosting Server mietst.\n\n%s\n%s",
   "text.rei.support.me.patreon": "Spenden auf Patreon",
-  "text.rei.support.me.bisect": "Code SHEDANIEL auf BisectHosting verwenden",
-  "text.rei.not.fully.initialized": "REI noch nicht vollständig initialisiert!",
+  "text.rei.support.me.bisect": "Verwende den Cod SHEDANIEL auf BisectHosting",
+  "text.rei.not.fully.initialized": "REI ist noch nicht vollständig initialisiert!",
   "text.rei.not.fully.initialized.tooltip": "Fehlende Stufen: %s\nFalls dies nicht weggeht,\nversuche mit den Logs nach Unterstützung zu suchen!",
   "text.rei.inventory.highlighting.enabled": "Inventarhervorhebung an",
   "text.rei.inventory.highlighting.enabled.tooltip": "Dies macht Slots, die nicht mit dem\nSuchfilter übereinstimmen grau.\nDoppelklicke die Suchleiste, um diesen Modus an- und auszuschalten.",
-  "text.rei.caching.search": "REI Caching Suchergebnisse...",
+  "text.rei.caching.search": "REI Suchergebnisse cachen...",
   "text.rei.caching.search.step": "Schritt %d/%d (%s%%):",
   "text.rei.config.menu.dark_theme": "Dunkles Design",
   "text.rei.config.menu.craftable_filter": "Filter für Herstellbare Gegenstände",
-  "text.rei.config.menu.display": "Anzeigeeinstellungen",
+  "text.rei.config.menu.display": "Anzeigeeinstellungen...",
   "text.rei.config.menu.display.remove_recipe_book": "Rezeptbuch entfernen",
   "text.rei.config.menu.display.left_side_mob_effects": "Linke Seite Mob-Effekte",
   "text.rei.config.menu.display.left_side_panel": "Linke Seitenleiste",
@@ -30,6 +30,8 @@
   "text.rei.config.menu.display.side_search_field": "Suchfeld",
   "text.rei.config.menu.display.syntax_highlighting": "Syntax-Hervorhebung",
   "text.rei.config.menu.config": "Weitere Optionen...",
+  "text.rei.config.menu.search_field.position": "Feldposition suchen...",
+  "text.rei.config.menu.search_field.input_method": "Eingabemethoden...",
   "category.rei.crafting": "Herstellen",
   "category.rei.smelting": "Schmelzen",
   "category.rei.smelting.fuel": "Brennstoff",
@@ -41,7 +43,7 @@
   "category.rei.cooking.xp": "%f XP",
   "category.rei.cooking.time&xp": "%s XP in %s Sek",
   "category.rei.smoking": "Räuchern",
-  "category.rei.blasting": "Sprengen",
+  "category.rei.blasting": "Schmelzen",
   "category.rei.campfire": "Lagerfeuer",
   "category.rei.campfire.time": "%s Sek.",
   "category.rei.stone_cutting": "Stein schneiden",
@@ -54,55 +56,77 @@
   "category.rei.smithing": "Schmieden",
   "category.rei.beacon_base": "Leuchtfeuer-Basis",
   "category.rei.beacon_payment": "Leuchtfeuerkosten",
-  "category.rei.tilling": "Aufteilung",
+  "category.rei.tilling": "Ackern",
   "category.rei.pathing": "Pfad",
   "category.rei.waxing": "Wachsen",
   "category.rei.wax_scraping": "Wachs abscharben",
   "category.rei.oxidizing": "Oxidation",
   "category.rei.oxidation_scraping": "Oxidationsabakratzung",
+  "category.rei.tag": "Tag",
   "category.rei.information": "Information",
   "text.rei.composting.chance": "§e%d%% Chance",
   "text.rei.composting.page": "Seite %d",
   "text.rei.config": "Einstellung",
-  "text.rei.config_tooltip": "Öffne das Konfig-Menü\n§7Shift-Klick um den Cheatenmodus ein-/auszuschalten",
-  "text.rei.cheat_items": "[{item_name}] x{item_count} {player_name} gegeben.",
-  "text.rei.failed_cheat_items": "§cItems geben fehlgeschlagen.",
+  "text.rei.config_tooltip": "Öffne den Konfigurationsbildschirm\n§7Shift-Klick um den Cheatenmodus ein-/auszuschalten",
+  "text.rei.cheat_items": "{item_count} [{item_name}] an {player_name} gegeben.",
+  "text.rei.failed_cheat_items": "§cKonnte keine Items geben.",
   "text.rei.too_long_nbt": "§cGegenstand NBT ist zu lang, um im Multiplayer angewendet zu werden.",
+  "text.rei.accepts": "Akzeptiert folgendes:",
+  "text.rei.tag_accept": "Tag: #%s",
+  "text.rei.missing": "Folgendes fehlt:",
   "text.rei.performance": "Leistungsanalyse",
+  "text.rei.addons": "REI Add-ons",
   "text.rei.shapeless": "Formlos",
+  "text.rei.input.methods": "Eingabemethoden",
+  "text.rei.input.methods.default": "Standard",
+  "text.rei.input.methods.default.description": "Die Standard Eingabemethode. Dies verändert den Suchbegriff nicht.",
+  "text.rei.input.methods.jyutping": "Jyutping (Kantonese)",
+  "text.rei.input.methods.jyutping.description": "Die Eingabemethode um chinesische Zeichen mit Jyutping (Kanonese) übereinzustimmen.",
+  "text.rei.input.methods.pinyin": "Pinyin (Mandarin)",
+  "text.rei.input.methods.pinyin.description": "Die Eingabemethode um chinesische Zeichen mit Pinyin (Mandarin) übereinzustimmen.",
+  "text.rei.input.methods.bopomofo": "Bopomofo (Mandarin)",
+  "text.rei.input.methods.bopomofo.description": "Die Eingabemethode um chinesische Zeichen mit Bopomofo (Mandarin) übereinzustimmen.",
+  "text.rei.input.methods.hint": "Alternative Eingabemethoden sind für deine Sprache verfügbar.",
+  "text.rei.input.methods.hint.configure": "Konfigurieren",
+  "text.rei.input.methods.hint.ignore": "Ignorieren",
+  "text.rei.input.methods.initializing": "Initialisiere Eingabemethoden",
   "ordering.rei.ascending": "Aufsteigend",
   "ordering.rei.descending": "Absteigend",
   "ordering.rei.registry": "Registrierung",
   "ordering.rei.name": "Name",
   "ordering.rei.item_groups": "Itemgruppen",
   "text.auto_craft.move_items": "Items bewegen",
-  "text.auto_craft.move_items.tooltip": "Strg-Klick zum Verschieben von Elementen",
+  "text.auto_craft.move_items.tooltip": "Strg-Klick zum Schnellherstellen",
   "text.auto_craft.move_items.yog": "Generiert NullPointerException!!",
+  "text.rei.expand.view": "Erweiterte Ansicht öffnen",
+  "text.rei.expand.view.close": "Erweiterte Ansicht schliessen",
+  "text.rei.tag.copy.clipboard": "Tagbaum in Zwischenablage kopieren",
   "error.rei.transfer.too_small": "Gegenstände können nicht in ein %dx%d-Raster verschoben werden.",
   "error.rei.not.on.server": "REI ist nicht auf dem Server installiert.",
   "error.rei.not.enough.materials": "Nicht genügend Materialien.",
   "error.rei.internal.error": "Interner Fehler: %s",
   "error.rei.recipe.not.unlocked": "Rezept nicht im Rezeptbuch freigeschaltet.",
   "error.rei.not.supported.move.items": "Verschieben von Elementen wird mit diesem Rezept und diesem Container nicht unterstützt.",
+  "text.rei.save.recipes": "Drücke %s auf diesem Rezept um es für später zu speichern.",
   "error.rei.no.handlers.applicable": "Keine Handler anwendbar.",
   "error.rei.multi.errors": "Mehrere Fehler:",
   "rei.rei.no.slot.in.inv": "Kann keinen Platz für Gegenstand im Inventar finden",
   "text.rei.showing_craftable": "Zeige herstellbar",
   "text.rei.showing_all": "Zeige alle",
-  "text.rei.delete_items": "§cLösche Item",
+  "text.rei.delete_items": "§cItem löschen",
   "text.rei.credits": "Mitwirkende",
   "text.rei.left_arrow": "<",
   "text.rei.right_arrow": ">",
   "text.rei.view_all_categories": "Alle Kategorien Anzeigen",
-  "text.rei.go_back_first_page": "Zurück zur Seite 1",
+  "text.rei.go_back_first_page": "Zurück zu Seite 1",
   "text.rei.choose_page": "Seite auswählen",
   "text.rei.shift_click_to": "Shift-Klicke %s",
   "text.rei.gamemode_button.tooltip.dropdown": "Spielmodus ändern: Auswahl",
-  "text.rei.gamemode_button.tooltip.entry": "zu %s wechseln",
+  "text.rei.gamemode_button.tooltip.entry": "Zu %s wechseln",
   "text.rei.weather_button.tooltip.dropdown": "Wetter ändern: Auswahl",
-  "text.rei.weather_button.tooltip.entry": "zu %s wechseln",
-  "text.rei.time_button.tooltip.dropdown": "Wetter ändern: Auswahl",
-  "text.rei.time_button.tooltip.entry": "zu %s wechseln",
+  "text.rei.weather_button.tooltip.entry": "Zu %s wechseln",
+  "text.rei.time_button.tooltip.dropdown": "Zeit ändern: Auswahl",
+  "text.rei.time_button.tooltip.entry": "Zu %s wechseln",
   "text.rei.time_button.name.morn": "Morgen",
   "text.rei.time_button.name.noon": "Mittag",
   "text.rei.time_button.name.evening": "Abend",
@@ -112,13 +136,13 @@
   "text.rei.config.is.reloading": "Plugins werden neu geladen!",
   "text.rei.enabled": "Ja",
   "text.rei.disabled": "Nein",
-  "text.rei.short_gamemode.survival": "S",
-  "text.rei.short_gamemode.creative": "C",
+  "text.rei.short_gamemode.survival": "Ü",
+  "text.rei.short_gamemode.creative": "K",
   "text.rei.short_gamemode.adventure": "A",
-  "text.rei.short_gamemode.spectator": "SP",
-  "text.rei.weather.clear": "Löschen",
+  "text.rei.short_gamemode.spectator": "Z",
+  "text.rei.weather.clear": "Sonne",
   "text.rei.weather.rain": "Regen",
-  "text.rei.weather.thunder": "Donner",
+  "text.rei.weather.thunder": "Gewitter",
   "text.rei.previous_category": "Vorherige Kategorie",
   "text.rei.next_category": "Nächste Kategorie",
   "text.rei.previous_page": "Vorherige Seite",
@@ -126,10 +150,12 @@
   "text.rei.back": "Zurück",
   "text.rei.select": "Auswählen",
   "text.rei.favorites": "Favoriten",
-  "text.rei.favorites_tooltip": " \n§7Drücke %s, um dieses zu Favoriten hinzuzufügen.",
-  "text.rei.remove_favorites_tooltip": " \n§7Drücke %s, um dieses aus den Favoriten zu entfernen.",
+  "text.rei.favorites_tooltip": " \n§7Drücke %s, um zu Favoriten hinzuzufügen.",
+  "text.rei.remove_favorites_tooltip": " \n§7Drücke %s, um aus Favoriten zu entfernen.",
   "text.rei.working_station": "Arbeitsstation",
   "text.rei.release_export": "Lasse %s los, um zu exportieren",
+  "text.rei.ask_to_export": "Möchtest du \"%s\" exportieren?",
+  "text.rei.ask_to_export.subtitle": "Dies wird %d Anzeigen als Bilder exportieren.",
   "text.rei.recipe_id": "\n%sRezept-Id: %s",
   "text.rei.recipe_screen_type.selection": "Darstellung Rezept-Bildschirm",
   "text.rei.recipe_screen_type.selection.sub": "Du kannst diese Einstellung jederzeit über den Konfigurationsbildschirm wieder bearbeiten.",
@@ -149,6 +175,7 @@
   "text.rei.changelog.title": "REI Änderungsliste",
   "text.rei.changelog.error.missingChangelogFile": "Fehlende Änderungsprotokolldatei!",
   "text.rei.changelog.error.failedToReadChangelogFile": "Fehler beim Lesen der Änderungsprotokolldatei!",
+  "text.rei.collapsed.entry": "Eingeklappter Eintrag: %s",
   "favorite.section.gamemode": "Spielmodus",
   "favorite.section.weather": "Wetter",
   "favorite.section.time": "Zeit",
@@ -157,8 +184,8 @@
   "tooltip.rei.drag_to_add_favorites": "§7Ziehe dies zu deinen Favoriten!",
   "msg.rei.copied_recipe_id": "Rezept-Identifizierer kopiert",
   "msg.rei.recipe_id_details": "Rezept-ID: %s",
-  "msg.rei.exported_recipe": "Exportiertes Rezept",
-  "msg.rei.exported_recipe.desc": "Überprüfen Sie den Ordner 'rei_exports'.",
+  "msg.rei.exported_recipe": "Rezept exportiert",
+  "msg.rei.exported_recipe.desc": "Überprüfe den 'rei_exports' Ordner.",
   "subsets.rei.roughlyenoughitems.all_entries": "Alle Einträge",
   "subsets.rei.roughlyenoughitems.item_groups": "Kreativ-Inventar-Tabs",
   "_comment": "Konfigurations-Tooltips",
@@ -192,7 +219,7 @@
   "config.roughlyenoughitems.recipeScreenType.config": "Art des Rezept-Bildschirms: %s",
   "config.roughlyenoughitems.recipeScreenType.unset": "Nicht Gesetzt",
   "config.roughlyenoughitems.recipeScreenType.original": "Standard",
-  "config.roughlyenoughitems.recipeScreenType.composite": "Komposit",
+  "config.roughlyenoughitems.recipeScreenType.composite": "Zusammensetzen",
   "config.roughlyenoughitems.layout": "Layout",
   "config.roughlyenoughitems.tooltips": "Tooltips",
   "config.roughlyenoughitems.accessibility": "Bedienungshilfen",
@@ -216,7 +243,7 @@
   "config.roughlyenoughitems.filteredEntries.selectNone": "Alle abwählen",
   "config.roughlyenoughitems.filteredEntries.hide": "Auswahl verstecken",
   "config.roughlyenoughitems.filteredEntries.show": "Auswahl anzeigen",
-  "config.roughlyenoughitems.filteredEntries.loadWorldFirst": "Zuerst eine Welt laden!",
+  "config.roughlyenoughitems.filteredEntries.loadWorldFirst": "Lade zuerst eine Welt!",
   "config.roughlyenoughitems.accessibility.entrySize": "Eintragsgröße:",
   "config.roughlyenoughitems.search.asyncSearch": "Asynchrone Suche",
   "config.roughlyenoughitems.search.asyncSearchPartitionSize": "\"Async Suche\"-Partitionsgröße",
@@ -259,26 +286,28 @@
   "config.roughlyenoughitems.leftSideMobEffects.boolean.false": "Rechts (Vanilla)",
   "config.roughlyenoughitems.fixTabCloseContainer": "Korrigier den Vanilla Tab Container (wenn das Rezeptbuch deaktiviert ist):",
   "config.roughlyenoughitems.lighterButtonHover": "Helles Button-Hovern:",
+  "config.roughlyenoughitems.layout.showCraftableOnlyButton": "Filter für Herstellbare Gegenstände:",
   "config.roughlyenoughitems.layout.showUtilsButtons": "Werkzeugknöpfe:",
   "config.roughlyenoughitems.commands.gamemodeCommand": "Befehl Spielmodus-Wechsel:",
   "config.roughlyenoughitems.commands.giveCommand": "Geben-Befehl:",
+  "config.roughlyenoughitems.commands.timeCommand": "Zeit-Befehl:",
   "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin": "Standard-Plugin laden:",
   "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin.boolean.false": "§cNein (Gefährlich)",
-  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread": "REI Neustart Thread",
+  "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread": "REI Neustart Thread:",
   "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread.boolean.true": "REI Thread",
   "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread.boolean.false": "§cPaket-Thread",
   "config.roughlyenoughitems.commands.weatherCommand": "Wetter Befehl:",
   "config.roughlyenoughitems.layout.entryPanelOrdering": "Reihenfolge der Itemlisten:",
   "config.roughlyenoughitems.list_ordering_button": "%s [%s]",
   "config.roughlyenoughitems.miscellaneous.newFastEntryRendering": "Schnelleres Eintrags-Rendering:",
-  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering": "Schnelleres Eintrags-Rendering:",
-  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering.@PrefixText": "Diese Option verbessert die Leistung bei der Darstellung von Einträgen bis zu 5x, mit durchschnittlich 2. x Leistungssteigerung. Dies wird jedoch die Verzauberungsbrille und animierte Texturen zerstören/verbuggen.",
+  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering": "Eintrags-Render cachen:",
+  "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering.@PrefixText": "Diese Option verbessert die Leistung bei der Darstellung von Einträgen bis zu 5x, mit durchschnittlich 2.5x Leistungssteigerung. Dies wird jedoch das Verzauberungsleuchten und animierte Texturen zerstören.",
   "config.roughlyenoughitems.itemCheatingMode": "Anzahl der Gegenstände beim Cheaten:",
   "config.roughlyenoughitems.itemCheatingMode.rei_like": "Normal",
   "config.roughlyenoughitems.itemCheatingMode.jei_like": "Umgekehrt",
   "config.roughlyenoughitems.search.searchFavorites": "Suchfilter in Favoriten:",
   "config.roughlyenoughitems.tooltips.appendModNames": "Mod-Namen anhängen:",
-  "config.roughlyenoughitems.tooltips.displayFavoritesTooltip": "Favoriten anhängen:",
+  "config.roughlyenoughitems.tooltips.displayFavoritesTooltip": "Favoriten-Hinweis anhängen:",
   "config.roughlyenoughitems.accessibility.snapToRows": "Zu Itemlisten hinziehen:",
   "config.roughlyenoughitems.accessibility.toastDisplayedOnCopyIdentifier": "Kopiere Identifizierer-Toast:",
   "config.roughlyenoughitems.scrollingEntryListWidget": "Darstellung der Gegenstandsliste:",
@@ -287,23 +316,24 @@
   "config.roughlyenoughitems.horizontalEntriesBoundaries": "horizontale Eintragsbegrenzung",
   "config.roughlyenoughitems.verticalEntriesBoundaries": "vertikale Entragsbegrenzung",
   "config.roughlyenoughitems.horizontalEntriesBoundariesColumns": "Eingabespaltenbegrenzung:",
-  "config.roughlyenoughitems.verticalEntriesBoundariesRows": "Eingabespaltenbegrenzung:",
-  "config.roughlyenoughitems.favoritesHorizontalEntriesBoundaries": "horizontale Grenzen:",
+  "config.roughlyenoughitems.verticalEntriesBoundariesRows": "Eingabezeilenbegrenzung:",
+  "config.roughlyenoughitems.favoritesHorizontalEntriesBoundaries": "horizontale Favoriten Grenzen:",
   "config.roughlyenoughitems.favoritesHorizontalEntriesBoundariesColumns": "Eingabespaltenbegrenzung:",
-  "config.roughlyenoughitems.syntaxHighlightingMode": "Syntaxdarstellung",
+  "config.roughlyenoughitems.syntaxHighlightingMode": "Syntax-Hervorhebungsmodus:",
   "config.roughlyenoughitems.syntaxHighlightingMode.config": "%s",
   "config.roughlyenoughitems.syntaxHighlightingMode.plain": "Normal",
-  "config.roughlyenoughitems.syntaxHighlightingMode.plain_underscored": "Normal unterstrichen",
+  "config.roughlyenoughitems.syntaxHighlightingMode.plain_underscored": "Normal (Unterstrichen)",
   "config.roughlyenoughitems.syntaxHighlightingMode.colorful": "Farbig",
-  "config.roughlyenoughitems.syntaxHighlightingMode.colorful_underscored": "Farbig unterstrichen",
-  "config.roughlyenoughitems.isFocusModeZoomed": "Autofokus-Modus",
-  "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "Gezoomt",
-  "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "Markiert",
+  "config.roughlyenoughitems.syntaxHighlightingMode.colorful_underscored": "Farbig (Unterstrichen)",
+  "config.roughlyenoughitems.isFocusModeZoomed": "Eintragsfokus Modus:",
+  "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "Vergrössert",
+  "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "Hervorgehoben",
   "config.roughlyenoughitems.filtering.shouldFilterDisplays": "Soll Filter anzeigen:",
-  "config.roughlyenoughitems.filteringScreen": "Benutzerdefinierte Filter",
+  "config.roughlyenoughitems.filteringScreen": "Benutzerdefiniertes filtern",
   "config.roughlyenoughitems.filteringRulesScreen": "Benutzerdefinierte Filterregeln",
   "config.roughlyenoughitems.filteringRulesScreen.new": "Filterregel erstellen",
   "config.roughlyenoughitems.filteringRulesScreen.delete": "Löschen",
+  "config.roughlyenoughitems.filteringRulesScreen.hint": "Versuche Drag+Drop!",
   "rule.roughlyenoughitems.filtering.manual": "Manuelles Filtern",
   "rule.roughlyenoughitems.filtering.manual.subtitle": "Wähle aus, was versteckt und angezeigt werden soll.",
   "rule.roughlyenoughitems.filtering.search": "Suche filtern",
@@ -332,7 +362,7 @@
   "language.roughlyenoughitems.ukrainian": "Ukrainisch",
   "language.roughlyenoughitems.spanish": "Spanisch",
   "language.roughlyenoughitems.italian": "Italienisch",
-  "language.roughlyenoughitems.czech": "Tschechien",
+  "language.roughlyenoughitems.czech": "Tschechisch",
   "language.roughlyenoughitems.danish": "Dänisch",
   "language.roughlyenoughitems.hebrew": "Hebräisch"
 }
