--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/es_es.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/es_es.json
@@ -30,6 +30,8 @@
   "text.rei.config.menu.display.side_search_field": "Campo de búsqueda lateral",
   "text.rei.config.menu.display.syntax_highlighting": "Resaltador de sintaxis",
   "text.rei.config.menu.config": "Otras opciones...",
+  "text.rei.config.menu.search_field.position": "Posición del campo de búsqueda...",
+  "text.rei.config.menu.search_field.input_method": "Métodos de entrada...",
   "category.rei.crafting": "Crafteo",
   "category.rei.smelting": "Fundición",
   "category.rei.smelting.fuel": "Combustible",
@@ -75,6 +77,19 @@
   "text.rei.performance": "Análisis de rendimiento",
   "text.rei.addons": "Los addons de REI",
   "text.rei.shapeless": "Sin forma",
+  "text.rei.input.methods": "Métodos de entrada",
+  "text.rei.input.methods.default": "Predeterminado",
+  "text.rei.input.methods.default.description": "El método de entrada predeterminado. Esto no transforma el término de búsqueda.",
+  "text.rei.input.methods.jyutping": "Jyutping (Cantonés)",
+  "text.rei.input.methods.jyutping.description": "Método de entrada para coincidir caracteres chinos con Jyutping (Cantonés).",
+  "text.rei.input.methods.pinyin": "Pinyin (Mandarino)",
+  "text.rei.input.methods.pinyin.description": "El método de entrada para coincidir caracteres chinos con Pinyin (Mandarino).",
+  "text.rei.input.methods.bopomofo": "Bopomofo (Mandarino)",
+  "text.rei.input.methods.bopomofo.description": "El método de entrada para coincidir caracteres chinos con Bopomofo (Mandarino).",
+  "text.rei.input.methods.hint": "Los métodos de entrada alternativa están disponibles para su idioma.",
+  "text.rei.input.methods.hint.configure": "Configurar",
+  "text.rei.input.methods.hint.ignore": "Ignorar",
+  "text.rei.input.methods.initializing": "Inicializando método de entrada",
   "ordering.rei.ascending": "Ascendente",
   "ordering.rei.descending": "Descendente",
   "ordering.rei.registry": "Registro",
@@ -161,8 +176,6 @@
   "text.rei.changelog.error.missingChangelogFile": "¡Falta el archivo del registro de cambios!",
   "text.rei.changelog.error.failedToReadChangelogFile": "¡Error al leer el archivo del registro de cambios!",
   "text.rei.collapsed.entry": "Entrada recolectada: %s",
-  "text.rei.collapsed.entry.hint.expand": "Haga clic para expandir todos los %s (%d entradas)",
-  "text.rei.collapsed.entry.hint.collapse": "Haga clic para expandir todos los %s (%d entradas)",
   "favorite.section.gamemode": "Modo de Juego",
   "favorite.section.weather": "Clima",
   "favorite.section.time": "Hora",
