--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/fr_fr.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/fr_fr.json
@@ -72,6 +72,11 @@
   "text.rei.performance": "Analyse des Performances",
   "text.rei.addons": "Modules REI",
   "text.rei.shapeless": "Sans forme",
+  "text.rei.input.methods.default": "Par défaut",
+  "text.rei.input.methods.hint": "Des méthodes de saisie alternatives sont disponibles pour votre langue.",
+  "text.rei.input.methods.hint.configure": "Configurer",
+  "text.rei.input.methods.hint.ignore": "Ignorer",
+  "text.rei.input.methods.initializing": "Initialisation de la méthode d'entrée",
   "ordering.rei.ascending": "Croissant",
   "ordering.rei.descending": "Décroissant",
   "ordering.rei.registry": "Registre",
@@ -80,6 +85,8 @@
   "text.auto_craft.move_items": "Transférer les objets",
   "text.auto_craft.move_items.tooltip": "Ctrl-Clique pour Déplacer des Items",
   "text.auto_craft.move_items.yog": "NullPointerException générée !",
+  "text.rei.expand.view": "Ouvrir la vue étendue",
+  "text.rei.expand.view.close": "Fermer la vue étendue",
   "error.rei.transfer.too_small": "Impossible de déplacer les objets vers une grille de %dx%d.",
   "error.rei.not.on.server": "REI n'est pas installé sur le serveur.",
   "error.rei.not.enough.materials": "Matériaux manquants.",
@@ -103,6 +110,7 @@
   "text.rei.gamemode_button.tooltip.entry": "Basculer vers %s",
   "text.rei.weather_button.tooltip.dropdown": "Changer la météo : liste déroulante",
   "text.rei.weather_button.tooltip.entry": "Basculer vers %s",
+  "text.rei.time_button.tooltip.entry": "Basculer vers %s",
   "text.rei.time_button.name.morn": "Matin",
   "text.rei.time_button.name.noon": "Midi",
   "text.rei.time_button.name.evening": "Soir",
@@ -130,6 +138,7 @@
   "text.rei.remove_favorites_tooltip": " \n§7Appuyez sur %s pour le retirer des favoris.",
   "text.rei.working_station": "Poste de travail",
   "text.rei.release_export": "Relâchez %s pour exporter",
+  "text.rei.ask_to_export": "Voulez-vous exporter \"%s\" ?",
   "text.rei.ask_to_export.subtitle": "Cela exportera %d sous forme d'images.",
   "text.rei.recipe_id": "\n%sID de recette : %s",
   "text.rei.recipe_screen_type.selection": "Écran de sélection du type d'affichage des recettes",
