--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/ko_kr.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/ko_kr.json
@@ -30,6 +30,7 @@
   "text.rei.config.menu.display.side_search_field": "측면 검색 필드",
   "text.rei.config.menu.display.syntax_highlighting": "구문 강조",
   "text.rei.config.menu.config": "기타 설정",
+  "text.rei.config.menu.search_field.input_method": "입력 방식",
   "category.rei.crafting": " 제작",
   "category.rei.smelting": "제련",
   "category.rei.smelting.fuel": "연료",
@@ -75,6 +76,19 @@
   "text.rei.performance": "성능 분석",
   "text.rei.addons": "REI 애드온",
   "text.rei.shapeless": "형식 없음",
+  "text.rei.input.methods": "입력 방식",
+  "text.rei.input.methods.default": "기본값",
+  "text.rei.input.methods.default.description": "기본 입력 방식입니다. 검색어를 변환하지 않습니다.",
+  "text.rei.input.methods.jyutping": "광둥어",
+  "text.rei.input.methods.jyutping.description": "광둥어 입력 방식입니다.",
+  "text.rei.input.methods.pinyin": "한어병음",
+  "text.rei.input.methods.pinyin.description": "한어병음 입력 방식입니다.",
+  "text.rei.input.methods.bopomofo": "주음부호",
+  "text.rei.input.methods.bopomofo.description": "주음부호 입력 방식입니다.",
+  "text.rei.input.methods.hint": "언어에 따른 다른 입력 방식도 사용 가능합니다.",
+  "text.rei.input.methods.hint.configure": "구성",
+  "text.rei.input.methods.hint.ignore": "무시",
+  "text.rei.input.methods.initializing": "입력 방식 초기화 중",
   "ordering.rei.ascending": "오름차순",
   "ordering.rei.descending": "내림차순",
   "ordering.rei.registry": "레지스트리",
@@ -161,8 +175,6 @@
   "text.rei.changelog.error.missingChangelogFile": "변경내역 파일이 없습니다!",
   "text.rei.changelog.error.failedToReadChangelogFile": "변경내역 파일을 읽지 못했습니다!",
   "text.rei.collapsed.entry": "붕괴된 항목: %s",
-  "text.rei.collapsed.entry.hint.expand": "전체 %s (%d 항목)을 펼치려면 클릭하세요",
-  "text.rei.collapsed.entry.hint.collapse": "전체 %s (%d 항목)을 접으려면 클릭하세요",
   "favorite.section.gamemode": "게임 모드",
   "favorite.section.weather": "날씨",
   "favorite.section.time": "시간",
