--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/pt_br.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/pt_br.json
@@ -30,6 +30,8 @@
   "text.rei.config.menu.display.side_search_field": "Campo de busca lateral",
   "text.rei.config.menu.display.syntax_highlighting": "Destaque de sintaxe",
   "text.rei.config.menu.config": "Outras...",
+  "text.rei.config.menu.search_field.position": "Posição do Campo de Busca...",
+  "text.rei.config.menu.search_field.input_method": "Meios de Entrada...",
   "category.rei.crafting": "Fabricáveis",
   "category.rei.smelting": "Fundíveis",
   "category.rei.smelting.fuel": "Combustível",
@@ -69,9 +71,23 @@
   "text.rei.failed_cheat_items": "§cFalha ao obter itens.",
   "text.rei.too_long_nbt": "§cO NBT do item é longo demais para ser aplicado ao modo multijogador.",
   "text.rei.accepts": "Aceita:",
+  "text.rei.missing": "Faltando o seguinte:",
   "text.rei.performance": "Análise de desempenho",
   "text.rei.addons": "Complementos do REI",
   "text.rei.shapeless": "Sem forma",
+  "text.rei.input.methods": "Meios de Entrada",
+  "text.rei.input.methods.default": "Padrão",
+  "text.rei.input.methods.default.description": "Meio de entrada padrão. Não altera a forma de pesquisa.",
+  "text.rei.input.methods.jyutping": "Jyutping (Cantonês)",
+  "text.rei.input.methods.jyutping.description": "O meio de entrada para caracteres chineses correspondentes ao Jyutping (Cantonês)",
+  "text.rei.input.methods.pinyin": "Pinyin (Mandarim)",
+  "text.rei.input.methods.pinyin.description": "O meio de entrada para caracteres chineses correspondentes ao Pinyin (Mandarim)",
+  "text.rei.input.methods.bopomofo": "Bopomofo (Mandarim)",
+  "text.rei.input.methods.bopomofo.description": "O meio de entrada para caracteres chineses correspondentes ao Bopomofo (Mandarim)",
+  "text.rei.input.methods.hint": "Meios de entrada alternativos estão disponíveis para seu idioma.",
+  "text.rei.input.methods.hint.configure": "Configurar",
+  "text.rei.input.methods.hint.ignore": "Ignorar",
+  "text.rei.input.methods.initializing": "Inicializando Meio de Entrada",
   "ordering.rei.ascending": "Crescente",
   "ordering.rei.descending": "Descrescente",
   "ordering.rei.registry": "Registro",
@@ -80,6 +96,8 @@
   "text.auto_craft.move_items": "Mover itens",
   "text.auto_craft.move_items.tooltip": "Ctrl + clique para mover itens",
   "text.auto_craft.move_items.yog": "Gerar NullPointerException!",
+  "text.rei.expand.view": "Abrir Vista Expandida",
+  "text.rei.expand.view.close": "Fechar Vista Expandida",
   "error.rei.transfer.too_small": "Não é possível mover os itens para uma grade %dx%d.",
   "error.rei.not.on.server": "O REI não está no servidor.",
   "error.rei.not.enough.materials": "Matéria-prima insuficiente.",
@@ -104,6 +122,7 @@
   "text.rei.gamemode_button.tooltip.entry": "Mudar para %s",
   "text.rei.weather_button.tooltip.dropdown": "Alterar tempo: Lista",
   "text.rei.weather_button.tooltip.entry": "Mudar para %s",
+  "text.rei.time_button.tooltip.dropdown": "Alterar tempo: Lista",
   "text.rei.time_button.tooltip.entry": "Alterar para %s",
   "text.rei.time_button.name.morn": "Manhã",
   "text.rei.time_button.name.noon": "Meio-dia",
@@ -153,8 +172,10 @@
   "text.rei.changelog.title": "Log de alterações do REI",
   "text.rei.changelog.error.missingChangelogFile": "Registro ausente!",
   "text.rei.changelog.error.failedToReadChangelogFile": "Falha ao ler o log!",
+  "text.rei.collapsed.entry": "Entrada colapsada: %s",
   "favorite.section.gamemode": "Modo de jogo",
   "favorite.section.weather": "Tempo",
+  "favorite.section.time": "Tempo",
   "tooltip.rei.fluid_amount": "§7%d unidade(s)",
   "tooltip.rei.fluid_amount.forge": "§7%d mB",
   "tooltip.rei.drag_to_add_favorites": "§7Arraste até aqui para adicionar aos favoritos!",
@@ -224,6 +245,7 @@
   "config.roughlyenoughitems.search.asyncSearch": "Pesquisa assíncrona:",
   "config.roughlyenoughitems.search.asyncSearchPartitionSize": "Tamanho de partição da pesquisa assíncrona:",
   "config.roughlyenoughitems.accessibility.useCompactTabs": "Guias compactas:",
+  "config.roughlyenoughitems.accessibility.useCompactTabButtons": "Flechas compactas:",
   "config.roughlyenoughitems.theme": "Tema:",
   "config.roughlyenoughitems.theme.dark": "Escuro",
   "config.roughlyenoughitems.theme.light": "Claro",
@@ -265,6 +287,7 @@
   "config.roughlyenoughitems.layout.showUtilsButtons": "Botões utilitários:",
   "config.roughlyenoughitems.commands.gamemodeCommand": "Comando do modo de jogo:",
   "config.roughlyenoughitems.commands.giveCommand": "Comando \"give\":",
+  "config.roughlyenoughitems.commands.timeCommand": "Comando de Tempo:",
   "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin": "Carregar plug-in padrão:",
   "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin.boolean.false": "§cNão (perigoso)",
   "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread": "Thread de recarga:",
