--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/tr_tr.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/tr_tr.json
@@ -30,6 +30,8 @@
   "text.rei.config.menu.display.side_search_field": "Yan Arama Bölümü",
   "text.rei.config.menu.display.syntax_highlighting": "Semtaks Vurgulama",
   "text.rei.config.menu.config": "Daha Fazla Seçenek..",
+  "text.rei.config.menu.search_field.position": "Arama Cubuğu Pozisyonu...",
+  "text.rei.config.menu.search_field.input_method": "Giriş Yöntemleri...",
   "category.rei.crafting": "Üretim",
   "category.rei.smelting": "Isıtma",
   "category.rei.smelting.fuel": "Yakıt",
@@ -69,6 +71,7 @@
   "text.rei.failed_cheat_items": "§cEşyalar verilemedi.",
   "text.rei.too_long_nbt": "§cItem NBT, çok oyunculuda uygulanamayacak kadar uzun.",
   "text.rei.performance": "Performans Analizi",
+  "text.rei.addons": "REI Eklentileri",
   "text.rei.shapeless": "Şekilsiz",
   "ordering.rei.ascending": "Artan",
   "ordering.rei.descending": "Azalan",
@@ -106,7 +109,7 @@
   "text.rei.time_button.name.noon": "Öğlen",
   "text.rei.time_button.name.evening": "Akşam",
   "text.rei.time_button.name.night": "Gece",
-  "text.rei.reload_config": "Eklentileri Yeniden Yükle",
+  "text.rei.reload_config": "Eklentileri Yenile",
   "text.rei.reload_search": "Aramayı Yenile",
   "text.rei.config.is.reloading": "Eklentiler yeniden yükleniyor!",
   "text.rei.enabled": "Evet",
@@ -139,7 +142,7 @@
   "text.rei.jei_compat.sub.stability": "§c§l(ALPHA)",
   "text.rei.view_recipes_for": "%s için tarifleri görün",
   "text.rei.subsets": "Alt Setler",
-  "text.rei.tiny_potato": "Minnacık Patatesler",
+  "text.rei.tiny_potato": "Minicik Pattisler",
   "text.rei.add_favorite_widget": "Ekle...",
   "text.rei.dispose_here": "Burada Kullan",
   "text.rei.crash.title": "REI Çöktü!",
@@ -311,5 +314,13 @@
   "language.roughlyenoughitems.upside_down_english": "İngilizce (Tersten)",
   "language.roughlyenoughitems.bulgarian": "Bulgarca",
   "language.roughlyenoughitems.russian": "Rusça",
-  "language.roughlyenoughitems.polish": "Lehçe"
+  "language.roughlyenoughitems.polish": "Lehçe",
+  "language.roughlyenoughitems.norwegian": "Norveçce",
+  "language.roughlyenoughitems.turkish": "Türkçe",
+  "language.roughlyenoughitems.ukrainian": "Ukraynaca",
+  "language.roughlyenoughitems.spanish": "İspanyolca",
+  "language.roughlyenoughitems.italian": "İtalyanca",
+  "language.roughlyenoughitems.czech": "Çekçe",
+  "language.roughlyenoughitems.danish": "Danca",
+  "language.roughlyenoughitems.hebrew": "İbranice\n"
 }
