--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_cn.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_cn.json
@@ -48,7 +48,7 @@
   "category.rei.campfire.time": "%s 秒",
   "category.rei.stone_cutting": "切石",
   "category.rei.brewing": "酿造",
-  "category.rei.brewing.input": "输入药水",
+  "category.rei.brewing.input": "源药水",
   "category.rei.brewing.reactant": "原料",
   "category.rei.brewing.result": "输出药水",
   "category.rei.composting": "堆肥",
@@ -176,8 +176,10 @@
   "text.rei.changelog.error.missingChangelogFile": "缺少更新日志文件！",
   "text.rei.changelog.error.failedToReadChangelogFile": "无法读取更新日志文件！",
   "text.rei.collapsed.entry": "折叠条目： %s",
-  "text.rei.collapsed.entry.hint.expand": "点击展开所有 %s (%d 条目)",
-  "text.rei.collapsed.entry.hint.collapse": "点击折叠所有 %s (%d 条目)",
+  "text.rei.collapsed.entry.hint.expand": "按住《Alt》键再点击此处以展开所有 %s (%d 条目)",
+  "text.rei.collapsed.entry.hint.expand.macos": "按住《Option》键再点击此处以展开所有 %s (%d 条目)",
+  "text.rei.collapsed.entry.hint.collapse": "按住《Alt》键再点击此处以折叠所有 %s (%d 条目)",
+  "text.rei.collapsed.entry.hint.collapse.macos": "按住《Option》键再点击此处以折叠所有 %s (%d 条目)",
   "favorite.section.gamemode": "游戏模式",
   "favorite.section.weather": "天气",
   "favorite.section.time": "时间",
@@ -249,6 +251,7 @@
   "config.roughlyenoughitems.accessibility.entrySize": "条目大小：",
   "config.roughlyenoughitems.search.asyncSearch": "异步搜索：",
   "config.roughlyenoughitems.search.asyncSearchPartitionSize": "异步搜索划分大小：",
+  "config.roughlyenoughitems.search.patchAsyncThreadCrash": "异步线程崩溃补丁：",
   "config.roughlyenoughitems.accessibility.useCompactTabs": "简洁标签：",
   "config.roughlyenoughitems.accessibility.useCompactTabButtons": "简洁标签分页按钮：",
   "config.roughlyenoughitems.theme": "外观主题:",
