--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_tw.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_tw.json
@@ -8,7 +8,7 @@
   "text.rei.no_permission_cheat": "作弊取得物品需管理員權限",
   "text.rei.search.field.suggestion": "搜尋…",
   "text.rei.feedback": "您想向 REI 開發人員提供任何回饋嗎？ %s 以提交您的建議！",
-  "text.rei.feedback.link": "點擊此處前往 Google Form",
+  "text.rei.feedback.link": "點擊此處前往 Google 表單",
   "text.rei.support.me": "支持我繼續讓 REI 變得更好！",
   "text.rei.support.me.desc": "作為 REI 的 Patreon 訂閱會員，你可以下載適用於最新 Minecraft 快照的 REI 版本。\n你也可以通過租用 BisectHosting 服務器來支持我。\n\n%s\n%s",
   "text.rei.support.me.patreon": "在 Patreon 上支持我",
@@ -176,8 +176,10 @@
   "text.rei.changelog.error.missingChangelogFile": "更新日誌檔案遺失",
   "text.rei.changelog.error.failedToReadChangelogFile": "讀取更新日誌檔案失敗！",
   "text.rei.collapsed.entry": "已摺疊: %s",
-  "text.rei.collapsed.entry.hint.expand": "按一下展開所有 %s （%d 條目）",
-  "text.rei.collapsed.entry.hint.collapse": "按一下摺疊所有 %s （%d 條目）",
+  "text.rei.collapsed.entry.hint.expand": "按住《Alt》鍵再點擊此處以展開所有 %s （%d 條目）",
+  "text.rei.collapsed.entry.hint.expand.macos": "按住《Option》鍵再點擊此處以展開所有 %s （%d 條目）",
+  "text.rei.collapsed.entry.hint.collapse": "按住《Alt》鍵再點擊此處以摺疊所有 %s （%d 條目）",
+  "text.rei.collapsed.entry.hint.collapse.macos": "按住《Option》鍵再點擊此處以摺疊所有 %s （%d 條目）",
   "favorite.section.gamemode": "遊戲模式",
   "favorite.section.weather": "天氣",
   "favorite.section.time": "時間",
