--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/ja_jp.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/ja_jp.json
@@ -30,6 +30,8 @@
   "text.rei.config.menu.display.side_search_field": "リスト側の検索ボックス",
   "text.rei.config.menu.display.syntax_highlighting": "シンタックスハイライト",
   "text.rei.config.menu.config": "詳細設定...",
+  "text.rei.config.menu.search_field.position": "検索欄の位置...",
+  "text.rei.config.menu.search_field.input_method": "入力方法...",
   "category.rei.crafting": "クラフト",
   "category.rei.smelting": "製錬（かまど）",
   "category.rei.smelting.fuel": "燃料",
@@ -75,6 +77,11 @@
   "text.rei.performance": "パフォーマンスの分析",
   "text.rei.addons": "REI アドオン",
   "text.rei.shapeless": "不定形",
+  "text.rei.input.methods": "入力方法",
+  "text.rei.input.methods.default": "デフォルト",
+  "text.rei.input.methods.default.description": "デフォルトの入力方法です。デフォルトでは検索キーワードを変換しません。",
+  "text.rei.input.methods.hint.ignore": "無視する",
+  "text.rei.input.methods.initializing": "入力方法をリセットする",
   "ordering.rei.ascending": "昇順",
   "ordering.rei.descending": "降順",
   "ordering.rei.registry": "アイテムID",
@@ -161,8 +168,6 @@
   "text.rei.changelog.error.missingChangelogFile": "更新履歴ログが見つかりません！",
   "text.rei.changelog.error.failedToReadChangelogFile": "更新履歴ログの読み込みに失敗しました！",
   "text.rei.collapsed.entry": "折りたたまれた項目: %s",
-  "text.rei.collapsed.entry.hint.expand": "クリックして全ての %s を展開する (%d 個の項目)",
-  "text.rei.collapsed.entry.hint.collapse": "クリックして全ての %s を折りたたむ (%s 個の項目)",
   "favorite.section.gamemode": "ゲームモード",
   "favorite.section.weather": "天候",
   "favorite.section.time": "時間",
@@ -277,7 +282,7 @@
   "config.roughlyenoughitems.layout.showUtilsButtons": "ユーティリティボタン:",
   "config.roughlyenoughitems.commands.gamemodeCommand": "ゲームモードを変更するコマンド：",
   "config.roughlyenoughitems.commands.giveCommand": "アイテムを付与するコマンド：",
-  "config.roughlyenoughitems.commands.timeCommand": "時間コマンド:",
+  "config.roughlyenoughitems.commands.timeCommand": "時間を変更するコマンド：",
   "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin": "既定プラグインをロードする：",
   "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin.boolean.false": "§cいいえ（危険）",
   "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread": "REIのリロードスレッド:",
