--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/ru_ru.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/ru_ru.json
@@ -30,6 +30,8 @@
   "text.rei.config.menu.display.side_search_field": "Поле поиска сбоку",
   "text.rei.config.menu.display.syntax_highlighting": "Подсветка синтаксиса",
   "text.rei.config.menu.config": "Дополнительные настройки...",
+  "text.rei.config.menu.search_field.position": "Положение поля поиска...",
+  "text.rei.config.menu.search_field.input_method": "Введите метод...",
   "category.rei.crafting": "Создание",
   "category.rei.smelting": "Плавление",
   "category.rei.smelting.fuel": "Топливо",
@@ -60,6 +62,7 @@
   "category.rei.wax_scraping": "Соскаб. воска",
   "category.rei.oxidizing": "Окисление",
   "category.rei.oxidation_scraping": "Соскаб. окисла",
+  "category.rei.tag": "Тэг",
   "category.rei.information": "Информация",
   "text.rei.composting.chance": "§e%d%% шанс",
   "text.rei.composting.page": "%d страница",
@@ -74,6 +77,13 @@
   "text.rei.performance": "Анализ производительности",
   "text.rei.addons": "Дополнения REI",
   "text.rei.shapeless": "Бесформенные",
+  "text.rei.input.methods": "Методы ввода",
+  "text.rei.input.methods.default": "По умолчанию",
+  "text.rei.input.methods.default.description": "Стандартный метод ввода. Это не переобразоовает поисковой запрос.",
+  "text.rei.input.methods.jyutping.description": "Метод ввода соответствует Китайским символам с Ютпхин (Кантон)",
+  "text.rei.input.methods.hint.configure": "Настроить",
+  "text.rei.input.methods.hint.ignore": "Игнорировать",
+  "text.rei.input.methods.initializing": "Запускается метод ввода",
   "ordering.rei.ascending": "По возрастанию",
   "ordering.rei.descending": "По убыванию",
   "ordering.rei.registry": "Регистр",
@@ -82,6 +92,9 @@
   "text.auto_craft.move_items": "Переместить предметы",
   "text.auto_craft.move_items.tooltip": "Ctrl+ЛКМ для помещения предметов",
   "text.auto_craft.move_items.yog": "Генерировать NullPointerException!!",
+  "text.rei.expand.view": "Открыть расширенный просмотр",
+  "text.rei.expand.view.close": "Закрыть расширенный просмотр",
+  "text.rei.tag.copy.clipboard": "Сохранить теги в буфер обмена",
   "error.rei.transfer.too_small": "Невозможно поместить предметы в сетку %dx%d.",
   "error.rei.not.on.server": "REI отсутствует на сервере.",
   "error.rei.not.enough.materials": "Недостаточно материалов.",
