--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -347,6 +347,8 @@
   "rule.roughlyenoughitems.filtering.search.show": "Show / Hide:",
   "rule.roughlyenoughitems.filtering.search.show.true": "Show",
   "rule.roughlyenoughitems.filtering.search.show.false": "Hide",
+  "rule.roughlyenoughitems.filtering.basic": "Basic Plugin Filtering",
+  "rule.roughlyenoughitems.filtering.basic.subtitle": "Filter entries by REI plugins. This is not configurable here.",
   "language.roughlyenoughitems.english": "English",
   "language.roughlyenoughitems.japanese": "Japanese",
   "language.roughlyenoughitems.chinese_simplified": "Chinese Simplified",
